@@ -230,6 +230,8 @@ function get_site_locations() {
 		FROM host
 		WHERE site_id = ?
 		AND location LIKE ?
+		AND location != ""
+		AND location IS NOT NULL
 		ORDER BY location',
 		array($site_id, "%$term%"));
 
@@ -237,6 +239,10 @@ function get_site_locations() {
 		foreach($locations as $l) {
 			$return[] = array('label' => $l['location'], 'value' => $l['location'], 'id' => $l['location']);
 		}
+	}
+
+	if (!cacti_sizeof($return)) {
+		$return[] = array('label' => __('None'), 'value' => __('None'), 'id' => __('None'));
 	}
 
 	print json_encode($return);
