@@ -21,6 +21,7 @@ Cacti CHANGELOG
 -issue#5168: Import Package is misleading when reviewing Device Template Changes
 -issue#5169: Host table status_fail_date and Status_rec_date can appear wrong
 -issue#5170: Prevent remote polling functionality from running unless remote pollers are configured
+-issue#5174: Empty Location when adding new device
 
 1.2.23
 -security#4920: Add .htaccess file to scripts folder
